actix-web-codegen/tests/trybuild/route-unexpected-method-fail.stderr
error: Unexpected HTTP method: `UNEXPECTED`
 --> $DIR/route-unexpected-method-fail.rs:3:21
  |
3 | #[route("/", method="UNEXPECTED")]
  |                     ^^^^^^^^^^^^

error[E0425]: cannot find value `index` in this scope
  --> $DIR/route-unexpected-method-fail.rs:12:55
   |
12 |     let srv = actix_test::start(|| App::new().service(index));
   |                                                       ^^^^^ not found in this scope
